--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
-﻿AddDefaultCharset UTF-8
-Options -Indexes
-
-RewriteEngine On
+<ifmodule mod_rewrite.c>
+ RewriteEngine on
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule .* index.php?$0 [PT,L,QSA]
+</ifmodule>
